--- a/hsm_portal_medico/layout.htm
+++ b/hsm_portal_medico/layout.htm
@@ -12,6 +12,58 @@
             <v-app id="inspire">
                 <v-container fluid grid-list-md>
                     <v-layout row wrap>
+                        <v-flex d-flex xs12 sm6 md3>
+                            <v-card color="indigo" dark>
+                                <v-card-title primary class="title">Lorem</v-card-title>
+                                <v-card-text>{{ lorem }}</v-card-text>
+                            </v-card>
+                        </v-flex>
+                        <v-flex d-flex xs12 sm6 md3>
+                            <v-card color="indigo" dark>
+                                <v-card-title primary class="title">Lorem</v-card-title>
+                                <v-card-text>{{ lorem }}</v-card-text>
+                            </v-card>
+                        </v-flex>
+                        <v-flex d-flex xs12 sm6 md3>
+                            <v-card color="indigo" dark>
+                                <v-card-title primary class="title">Lorem</v-card-title>
+                                <v-card-text>{{ lorem }}</v-card-text>
+                            </v-card>
+                        </v-flex>
+                        <v-flex d-flex xs12 sm6 md3>
+                            <v-card color="indigo" dark>
+                                <v-card-title primary class="title">Lorem</v-card-title>
+                                <v-card-text>{{ lorem }}</v-card-text>
+                            </v-card>
+                        </v-flex>
+                    </v-layout>
+                </v-container>
+
+                <v-container fluid grid-list-md>
+                    <v-layout row wrap>
+                        <v-flex d-flex xs12 sm6 md4>
+                            <v-card color="purple" dark>
+                                <v-card-title primary class="title">Lorem</v-card-title>
+                                <v-card-text>{{ lorem }}</v-card-text>
+                            </v-card>
+                        </v-flex>
+                        <v-flex d-flex xs12 sm6 md4>
+                            <v-card color="purple" dark>
+                                <v-card-title primary class="title">Lorem</v-card-title>
+                                <v-card-text>{{ lorem }}</v-card-text>
+                            </v-card>
+                        </v-flex>
+                        <v-flex d-flex xs12 sm6 md4>
+                            <v-card color="purple" dark>
+                                <v-card-title primary class="title">Lorem</v-card-title>
+                                <v-card-text>{{ lorem }}</v-card-text>
+                            </v-card>
+                        </v-flex>
+                    </v-layout>
+                </v-container>
+                        
+                <v-container fluid grid-list-md>
+                    <v-layout row wrap>
                         <v-flex d-flex xs12 sm6 md4>
                             <v-card color="purple" dark>
                                 <v-card-title primary class="title">Lorem</v-card-title>
@@ -20,56 +72,56 @@
                         </v-flex>
                         <v-flex d-flex xs12 sm6 md3>
                             <v-layout row wrap>
-                            <v-flex d-flex>
-                                <v-card color="indigo" dark>
-                                    <v-card-text>{{ lorem.slice(0, 70) }}</v-card-text>
-                                </v-card>
+                                <v-flex d-flex>
+                                    <v-card color="indigo" dark>
+                                        <v-card-text>{{ lorem.slice(0, 70) }}</v-card-text>
+                                    </v-card>
+                                </v-flex>
+                                <v-flex d-flex>
+                                    <v-layout row wrap>
+                                        <v-flex
+                                        v-for="n in 2"
+                                        :key="n"
+                                        d-flex
+                                        xs12
+                                        >
+                                            <v-card
+                                                color="red lighten-2"
+                                                dark
+                                            >
+                                                <v-card-text>{{ lorem.slice(0, 40) }}</v-card-text>
+                                            </v-card>
+                                        </v-flex>
+                                    </v-layout>
+                                </v-flex>
+                            </v-layout>
                         </v-flex>
-                        <v-flex d-flex>
-                          <v-layout row wrap>
-                            <v-flex
-                              v-for="n in 2"
-                              :key="n"
-                              d-flex
-                              xs12
-                            >
-                              <v-card
-                                color="red lighten-2"
-                                dark
-                              >
-                                <v-card-text>{{ lorem.slice(0, 40) }}</v-card-text>
-                              </v-card>
-                            </v-flex>
-                          </v-layout>
+                        <v-flex d-flex xs12 sm6 md2 child-flex>
+                            <v-card color="green lighten-2" dark>
+                                <v-card-text>{{ lorem.slice(0, 90) }}</v-card-text>
+                            </v-card>
                         </v-flex>
-                      </v-layout>
-                    </v-flex>
-                    <v-flex d-flex xs12 sm6 md2 child-flex>
-                      <v-card color="green lighten-2" dark>
-                        <v-card-text>{{ lorem.slice(0, 90) }}</v-card-text>
-                      </v-card>
-                    </v-flex>
-                    <v-flex d-flex xs12 sm6 md3>
-                      <v-card color="blue lighten-2" dark>
-                        <v-card-text>{{ lorem.slice(0, 100) }}</v-card-text>
-                      </v-card>
-                    </v-flex>
-                  </v-layout>
-            </v-container>
-          </v-app>
+                        <v-flex d-flex xs12 sm6 md3>
+                            <v-card color="blue lighten-2" dark>
+                                <v-card-text>{{ lorem.slice(0, 100) }}</v-card-text>
+                            </v-card>
+                        </v-flex>
+                    </v-layout>
+                </v-container>
+            </v-app>
         </div>
-    <script src='https://unpkg.com/babel-polyfill/dist/polyfill.min.js'></script>
-    <script src='https://unpkg.com/vue/dist/vue.js'></script>
-    <script src='https://unpkg.com/vuetify@1.0.19/dist/vuetify.min.js'></script>
-    <script>
-        new Vue({
-            el: '#app',
-            data: function data() {
-                return {
-                    lorem: 'Lorem ipsum dolor sit amet, mel at clita quando. Te sit oratio vituperatoribus, nam ad ipsum posidonium mediocritatem, explicari dissentiunt cu mea. Repudiare disputationi vim in, mollis iriure nec cu, alienum argumentum ius ad. Pri eu justo aeque torquatos.'
-                };
-            }
-        });
-    </script>
-</body>
+        <script src='https://unpkg.com/babel-polyfill/dist/polyfill.min.js'></script>
+        <script src='https://unpkg.com/vue/dist/vue.js'></script>
+        <script src='https://unpkg.com/vuetify@1.0.19/dist/vuetify.min.js'></script>
+        <script>
+            new Vue({
+                el: '#app',
+                data: function data() {
+                    return {
+                        lorem: 'Lorem ipsum dolor sit amet, mel at clita quando. Te sit oratio vituperatoribus, nam ad ipsum posidonium mediocritatem, explicari dissentiunt cu mea. Repudiare disputationi vim in, mollis iriure nec cu, alienum argumentum ius ad. Pri eu justo aeque torquatos.'
+                    };
+                }
+            });
+        </script>
+    </body>
 </html>
