--- a/hsm_portal_medico/cirurgia.htm
+++ b/hsm_portal_medico/cirurgia.htm
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Vuetify Example Pen</title>
+    <title>Cirurgia - HSM Portal Medico</title>
     <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons'>
     <link rel='stylesheet prefetch' href='https://unpkg.com/vuetify@1.0.19/dist/vuetify.min.css'>
 </head>
@@ -48,7 +48,7 @@
                 </v-layout>
                 <v-layout row wrap>
                     <v-flex d-flex xs12 sm4 md3>
-                        <v-text-field v-model="procedimento" label="Procedimento"></v-text-field>
+                        <v-text-field v-model="procedimento" label="Procedimento" @change="BuscarCodigo()"></v-text-field>
                     </v-flex>
                     <v-flex d-flex xs12 sm8 md9>
                         <v-text-field v-model="descricao" label="Descrição"></v-text-field>
@@ -57,7 +57,6 @@
                         </v-btn>
                     </v-flex>
                 </v-layout>
-
                 <v-data-table :headers="headers" :items="procedimentos" hide-actions>
                     <template slot="items" slot-scope="props">
                         <td>{{ props.item.procedimento }}</td>
@@ -69,25 +68,24 @@
                         </td>
                     </template>
                 </v-data-table>
-
             </v-container>
         </v-app>
     </div>
     <script src='https://unpkg.com/babel-polyfill/dist/polyfill.min.js'></script>
     <script src='https://unpkg.com/vue/dist/vue.js'></script>
     <script src='https://unpkg.com/vuetify@1.0.19/dist/vuetify.min.js'></script>
+    <script src='https://unpkg.com/vue-resource@1.5.1/dist/vue-resource.min.js'></script>
+
     <script>
         var vm = new Vue({
             el: '#app',
             data: function data() {
                 return {
-                    lorem: 'Lorem ipsum dolor sit amet, mel at clita quando. Te sit oratio vituperatoribus, nam ad ipsum posidonium mediocritatem, explicari dissentiunt cu mea. Repudiare disputationi vim in, mollis iriure nec cu, alienum argumentum ius ad. Pri eu justo aeque torquatos.',
-                    data_autorizacao: null,
-                    data_autorizacao_Formatted: null,
-                    menu_data_autorizacao: false,
-                    validade_autorizacao: null,
-                    validade_autorizacao_Formatted: null,
+                    guia: null, autorizacao: null, data_autorizacao: null,
+                    data_autorizacao_Formatted: null, menu_data_autorizacao: false,
+                    validade_autorizacao: null, validade_autorizacao_Formatted: null,
                     menu_validade_autorizacao: false,
+                    tempo: null, anestesia: null, procedimento: null, descricao: null,
 
                     headers: [
                         { text: 'Procedimento', align: 'left', value: 'procedimento' },
@@ -106,11 +104,20 @@
                 },
             },
             methods: {
+                BuscarCodigo() {
+                    this.$http.post("cirurgia.asmx/getCirurgiaCod", {strCod: this.procedimento})
+                    .then((res)=>{
+                       var r = JSON.parse(res.data.d)
+                       if (r.length!=0) this.descricao = r[0].Nome 
+                       else this.descricao = ''
+                    })
+                },
+
                 delItem(item) {
                     const index = this.procedimentos.indexOf(item)
                     confirm('Confirma a exclusão deste item?') && this.procedimentos.splice(index, 1)
                 },
-                
+
                 addItem() {
                     this.procedimentos.push({
                         'procedimento': this.procedimento, 'descricao': this.descricao
@@ -127,7 +134,6 @@
                 },
 
                 parseDate(date) {
-
                     if (!date) return null
 
                     const [month, day, year] = date.split('/')
