--- a/hsm_portal_medico/cirurgia.htm
+++ b/hsm_portal_medico/cirurgia.htm
@@ -13,6 +13,14 @@
         <v-app id="inspire">
             <v-container fluid grid-list-md>
                 <v-layout row wrap>
+                    <v-flex d-flex>
+                        <v-card color="indigo" dark>
+                            <v-btn color="success" @click="gravar()">Success</v-btn>
+                        </v-card>
+                    </v-flex>
+                </v-layout>
+
+                <v-layout row wrap>
                     <v-flex d-flex xs12 sm6 md3>
                         <v-text-field v-model="guia" label="Nr.Guia" required></v-text-field>
                     </v-flex>
@@ -20,15 +28,15 @@
                         <v-text-field v-model="autorizacao" label="Nr.Autorização" required></v-text-field>
                     </v-flex>
                     <v-flex d-flex xs12 sm6 md3>
-                        <v-menu ref="menu_data_autoriza" v-model="menu_data_autoriza" :nudge-right="40" :close-on-content-click="false" lazy
-                            transition="scale-transition" offset-y full-width min-width="290px">
+                        <v-menu ref="menu_data_autoriza" v-model="menu_data_autoriza" :nudge-right="40" :close-on-content-click="false" lazy transition="scale-transition"
+                            offset-y full-width min-width="290px">
                             <v-text-field slot="activator" v-model="data_autoriza_Formatted" label="Data Autorização" prepend-icon="event"></v-text-field>
                             <v-date-picker locale="pt-br" v-model="data_autoriza" @input="menu_data_autoriza = false"></v-date-picker>
                         </v-menu>
                     </v-flex>
                     <v-flex d-flex xs12 sm6 md3>
-                        <v-menu ref="menu_valid_autoriza" v-model="menu_valid_autoriza" :nudge-right="40" :close-on-content-click="false"
-                            lazy transition="scale-transition" offset-y full-width min-width="290px">
+                        <v-menu ref="menu_valid_autoriza" v-model="menu_valid_autoriza" :nudge-right="40" :close-on-content-click="false" lazy transition="scale-transition"
+                            offset-y full-width min-width="290px">
                             <v-text-field slot="activator" v-model="valid_autoriza_Formatted" label="Validade Autorização" prepend-icon="event"></v-text-field>
                             <v-date-picker locale="pt-br" v-model="valid_autoriza" @input="menu_valid_autoriza = false"></v-date-picker>
                         </v-menu>
@@ -48,8 +56,8 @@
                 </v-layout>
                 <v-layout row wrap>
                     <v-flex d-flex xs12 sm12 md12>
-                        <v-select :loading="loading" :items="items" :search-input.sync="search" v-model="procedimento" label="Procedimento Cirurgico" autocomplete
-                            return-object ></v-select>
+                        <v-select :loading="loading" :items="items" :search-input.sync="search" v-model="procedimento" label="Procedimento Cirurgico"
+                            autocomplete return-object></v-select>
                         <v-btn flat icon color="primary" @click="addItem()">
                             <v-icon>check_circle</v-icon>
                         </v-btn>
