--- a/hsm_portal_medico/agenda.htm
+++ b/hsm_portal_medico/agenda.htm
@@ -1,10 +1,62 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
 
+<head>
+  <meta charset="utf-8" />
+  <title></title>
+</head>
+
+<body>
+  <input type="file" id="myFile" accept="image/jpeg">
+  <button type="button" onclick='foto_user()'>Enviar</button>
+  <img id="user-img" src="/uploads/foto-user-643316.jpg">
 </body>
+<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script>
+  function foto_user() {
+    var preview = document.getElementById('user-img');
+    var file = document.getElementById("myFile").files[0];
+    var reader = new FileReader();
+
+    reader.onloadend = function () {
+      preview.src = reader.result;
+
+      var byteData = reader.result;
+      var obj = {};
+      var fileName = file.name;
+      var contentType = file.type;
+      byteData = byteData.split(';')[1].replace("base64,", "");
+      obj.Data = byteData;
+      obj.Name = fileName;
+      obj.ContentType = contentType;
+      console.dir(JSON.stringify(obj))
+
+      $.ajax({
+        type: "POST",
+        url: "agenda.asmx/SaveImage",
+        data: '{data : ' + JSON.stringify(obj) + ' }',
+        contentType: "application/json; charset=utf-8",
+        dataType: "json",
+        success: function (r) {
+          alert(r);
+        },
+        error: function (r) {
+          alert('error');
+          //alert(r.responseText);
+        },
+        failure: function (r) {
+          alert('fail');
+          //alert(r.responseText);
+        }
+      });
+    }
+
+    if (file) {
+      reader.readAsDataURL(file);
+    } else {
+      preview.src = "";
+    }
+  }
+</script>
+
 </html>
