--- a/hsm_portal_medico/cirurgia.htm
+++ b/hsm_portal_medico/cirurgia.htm
@@ -73,6 +73,11 @@
                             <v-btn color="success" @click="gravar()">Success</v-btn>
                         </v-card>
                     </v-flex>
+                    <v-flex d-flex>
+                        <v-card color="indigo" dark>
+                            <v-btn color="success" @click="isAuth()">teste</v-btn>
+                        </v-card>
+                    </v-flex>                    
                 </v-layout>                
             </v-container>
         </v-app>
